--- a/code/public/test.bib
+++ b/code/public/test.bib
@@ -152,3 +152,13 @@
             number      = {3},
             volume      = {},
           }
+        @article{antonio2019it ad,
+            author    = {Paweena Wanchai and Antonio Díaz Andrade and Angsana Techatassanasoontorn},
+            title     = {IT adaptation patterns to enterprise-wide systems},
+            journal   = {Communications of the Association for Information Systems},
+            year      = {2019},
+            pages      = {226-250},
+            doi      = {10.17705/1CAIS.04515},
+            number      = {1},
+            volume      = {45},
+          }
